2010-08-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c: Do not create a data record for a blank line at the end
	of the input stream.
	Bugfix.

2010-08-05  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in src/command.c src/history.c src/mouse.c src/plot.c
	src/show.c:

	Finally a work-around for the broken libreadline on OSX, which is really
	a wrapper for some version of libeditline.  Test for each potentially
	missing function in configure and deal with it if it's missing.  There
	may still be an issue with autoconfiguring support for the history
	functions.
	Bug #1839048 and others 

2010-07-28  Ethan A Merritt  <merritt@u.washington.edu>

	* term/estimate.trm:  Always estimate escaped characters as requiring
	one character width.
	Bug #3036010

2010-07-27  Tim Mooney  <enchanter@users.sourceforge.net>

	* configure.in:  If lua.pc is not present but liblua.so is found
	anyhow,  then set HAVE_LUA and LUA_LIBS explicitly.
	Bug #3035608

2010-07-26  Ingo Thies  <ingo.thies@gmx.de>

	* src/gadgets.h src/mouse.c src/set.c:  Allow continuous rotation of 3D
	plots when mousing; i.e., do not limit rotation angle to 0<rotx<180

2010-07-26  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* term/win.trm src/win/wgraph.c:  Yet another windows terminal font fix.
	Bug #2972307

2010-07-11  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/graph3d.c (do_3dplot): Simplify the key sample code for contour
	plots with style "points".  Set a default color sequence for contours
	belonging to a surface drawn with "lc variable".

2010-07-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (term_apply_lp_properties): Yet another bandaid fix for
	problems with "lc var".  If the higher level code has failed to resolve
	LC_COLORFROMCOLUMN (or LT_DEFAULT) into an actual color, use LT_BLACK.
	Bug #3026477

2010-07-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse): The coloring option "lc N" should not set a